# semantic-learning

./: README.md
.devcontainer/: devcontainer.json
semantic-learning/: pyproject.toml
semantic-learning/semantic_learning/: hotel.py  hotel_search_plugin.py  main.py  phi3.py  time_plugin.py
